updated the search page with products displayed in table format

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -588,6 +588,12 @@ section#registration {
 .productContainer {
     padding: 10px;
     margin: 10px;
+    display: flex;
+}
+
+.productContainer::after {
+    clear: both;
+    display: table;
 }
 
 .productContainerItem {
